feat: [CDS-44245]: no results, empty starting page for Freeze window list with illustration (#11644)
* feat: no results, empty starting page for Freeze window list with illustration

* feat: no results, empty starting page for Freeze window list with illustration

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -568,7 +568,7 @@ clientId: Client Id
 filters:
   saveNewFilter: Save New Filter
   unsavedFilter: Unsaved Filter
-  noMatchingFilterData: No Results found matching the Filter criteria
+  noMatchingFilterData: No results found matching the filter criteria
   noResultsFound: No results found
   clearFilters: Clear Filters
   noFilterSaved: No Filter Saved
