--- a/src/modules/72-freeze-windows/strings/strings.en.yaml
+++ b/src/modules/72-freeze-windows/strings/strings.en.yaml
@@ -25,4 +25,11 @@ freezeStudio:
   freezeCreatedSuccessfully: Freeze window created successfully
   freezeUpdatedSuccessfully: Freeze window updated successfully
 
-disableAllDeployments: Disable all deployments for this Account (all Projects)
+globalFreeze:
+  disableFreeze: Disable Freeze on all deployments for this {{scope}}
+  disableFreezeText: For any deployments frozen, you will have to manually go back and resume them.
+  disableFreezeSuccess: Freeze disabled on all deployments for this {{scope}}
+  disableFreezeFailure: Failed to disable freeze
+  enableFreeze: Enable Freeze on all deployments for this {{scope}}
+  enableFreezeSuccess: Freeze enabled on all deployments for this {{scope}}
+  enableFreezeFailure: Failed to enable freeze
