feat: [PIE-5477]: env group, multi env, mult infras (#11612)
* feat: transformUtils

* chore: extract utils

* feat: multi env support

* feat: multi env support

* feat: multi env support

* chore: remove unused vars

* feat: update map condition

* feat: add env groups

* feat: add envs in env groups

* feat: update radio for env group toggle

* feat: add single infra back

* fix: es lint

* fix: toggle confirmations

* fix: multi infra

* fix: validation

* chore: env group selection

* chore: env group selection

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -1018,3 +1018,6 @@ assignedAt: Assigned at
 assignedThrough: Assigned Through
 directly: Directly
 loadBalancer: Load Balancer
+environmentInputs: Environment inputs
+infrastructures: Infrastructures
+infrastructureInputs: Infrastructure inputs
