--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -176,6 +176,17 @@ pipelineSteps:
     environmentInEnvGroupIsRequired: 'Environment in Environment Group is required'
     clusterIsRequired: 'Clusters are required'
     multiEnvInfraToggleText: 'Deploy to multiple Environments or Infrastructures'
+    viewEnvironmentInputs: View environment inputs
+    hideEnvironmentInputs: Hide environment inputs
+    viewInfrastructureInputs: View infrastructure inputs
+    hideInfrastructureInputs: Hide infrastructure inputs
+    multiEnvironmentsParallelDeployLabel: Deploy environments in parallel?
+    environmentGroupDialogTitleText: Deploy to environment group?
+    environmentGroupConfirmationText: Are you sure you want to switch to deploying to a single environment group?. If you choose to proceed, your existing environments will be lost.
+    multiEnvironmentsDialogTitleText: Deploy to multiple environments or infrastructures?
+    multiEnvironmentsConfirmationText: Are you sure you want to switch to deploying multiple environments or infrastructures?. If you choose to proceed, your existing environment will be migrated automatically.
+    singleEnvironmentDialogTitleText: Deploy to single environment?
+    singleEnvironmentConfirmationText: Are you sure you want to switch to deploying to a single environment?. If you choose to proceed, your existing environments will be lost.
   serviceTab:
     stageOverrides: Stage Overrides
     overrideChanges: Override artifacts, manifests, service variables for this stage
@@ -241,7 +252,7 @@ serviceDashboard:
   headers:
     artifactVersion: Artifact Version
     environment: '{{$.environment}}'
-    infrastructures: Infrastructures
+    infrastructures: '{{$.common.infrastructures}}'
     infras: Infras
     clusters: '{{$.common.clusters}}'
     instances: '{{$.instanceFieldOptions.instances}}'
