--- a/src/modules/72-freeze-windows/strings/strings.en.yaml
+++ b/src/modules/72-freeze-windows/strings/strings.en.yaml
@@ -22,6 +22,8 @@ freezeStudio:
   allOrganizations: All Organizations
   excludeFollowingProject: Exclude the following Project
   excludeFollowingProjects: Exclude the following Projects
+  excludeFollowingOrg: Exclude the following Organization
+  excludeFollowingOrgs: Exclude the following Organizations
   freezeCreatedSuccessfully: Freeze window created successfully
   freezeUpdatedSuccessfully: Freeze window updated successfully
 
