feat: [PIE-5593]: PipelineChaining- added code source & view button to the pipeline selection modal (#11641)
* feat: [PIE-5593]: added code source to the pipeline selection modal

* feat: [PIE-5593]: added view button to the pipeline selection modal

* feat: [PIE-5593]: minor changes

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1107,6 +1107,7 @@ deploymentFrequency: 'Deployment Frequency'
 executionFrequency: 'Execution Frequency'
 retryPipeline: Retry Failed Pipeline
 openInNewTab: Open in new tab
+openPipelineInNewTab: Open Pipeline in new tab
 stagetoRetryFrom: Select the stage that you would like to resume from
 runAllParallelstages: Run all parallel stages
 runFailedStages: Run only failed stages
