feat: [PIE-5477]: Multi Env runtime support in RPF (#11707)
* chore: css file rename

* feat: environment selection in RPF

* feat: [PIE-5477]: Env runtime support in RPF

* chore: cleanup

* chore: make infrastructures arra

* chore: make infra input step generic

* feat: [PIE-5477]: multi envs in rpf

* chore: resolved sonarqube issues

* chore: remove FF condition

* chore: skip cypress test

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -1036,3 +1036,5 @@ loadBalancer: Load Balancer
 environmentInputs: Environment inputs
 infrastructures: Infrastructures
 infrastructureInputs: Infrastructure inputs
+environmentPrefix: 'Environment: {{ name }}'
+infrastructurePrefix: 'Infrastructure: {{ name }}'
