fix: [CDS-44418]: instances data added in ActiveServiceInstancePopover for DT (#11731)
* fix: [CDS-44418]: instances data added in ActiveServiceInstancePopover for DT

* fix: update infra variables text

* fix: cypress text fix

* fix: test case added for custom deployment

* fix: comments addressed

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1390,8 +1390,10 @@ skipInstances:
   title: 'Skip instances with the same artifact version already deployed'
 selectiveStageExecution: 'Selective stage execution'
 customDeployment:
+  infraDefinitionVariablesTitle: 'Infrastructure Properties'
   infraVariablesTitle: 'Define the variables to be used in your infrastructure'
-  updateInfraVariablesTitle: ' Update values for variables defined as part of used template'
+  updateInfraVariablesTitle: 'Update values for variables defined as part of used template'
+  emptyInfraVariablesTitle: 'No variables are defined as part of used template'
   seeOnlyTemplatesFor: See only templates for {{name}}
   instanceObjectArrayPath: 'Instance Object Array Path'
   instanceAttributes: 'Instance Attributes'
