feat: [CDS-44394]: for number type of field, allow only numbers to be entered in the allowed values tag input (#11727)
* feat: while configuring allowed values for number type of field, allow only numbers to be entered in the allowed values tag input

* fix: add validator test case for number validator

* chore: add test case in ConfigureOptions test file that checks if only numbers are allowed when allowedValuesType is passed as NUMBER

* fix: pass allowedValuesType as NUMBER only when variable is of type number

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -208,6 +208,7 @@ validation:
   subscription: 'Subscription is required'
   repository: 'Repository is required'
   projectIsRequired: Project is required
+  onlyDigitsAllowed: Only digits are allowed
 specify: Specify
 role: Role
 projectViewer: Project Viewer
