fix: [CDS-42730]: UX improvements for linking deployment template (#11736)
* fix: [CDS-42730]: UX improvements for linking deployment template

* fix: [CDS-42730]: UX changes

* fix: [CDS-42730]: Updated snapshots

* fix: [CDS-42730]: cypress fix

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -721,6 +721,7 @@ plans:
   subscription: Subscription
   manageSubscription: Manage Subscription
 useTemplate: Use template
+deploymentTemplateSteps: Deployment Template Steps
 saveAsTemplate: Save as Template
 comingSoon: Coming Soon
 comingSoon2: Coming Soon!
