feat: [PIE-4994]: ServiceNow Import Set (#11327)
* feat: [PIE-4994]: ServiceNow Import Set

* feat: [PIE-4994]: updated swagger

* feat: [PIE-4994]: added errorMessage check & test cases

* feat: [PIE-4994]: timeout allowed values check

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -270,6 +270,14 @@ serviceNowUpdateStep:
   fieldType:
     applyFromTemplate: Apply from template
     updateFields: Update Fields
+serviceNowImportSetStep:
+  stagingTable: Staging Table
+  jsonBody: JSON Body
+  validations:
+    stagingTableRequired: Staging Table is required
+    jsonRequired: JSON is required
+    invalidJson: JSON is not valid
+  fetchingStagingTableNamePlaceholder: Fetching Staging Table Name...
 commonApprovalStep:
   execution:
     allConditionsMsg: 'If all of the following conditions are met:'
