feat: [PL-26342]: Add cron screen to LDAP wizard (#11609)

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -1040,3 +1040,38 @@ infrastructures: Infrastructures
 infrastructureInputs: Infrastructure inputs
 environmentPrefix: 'Environment: {{ name }}'
 infrastructurePrefix: 'Infrastructure: {{ name }}'
+schedulePanel:
+  minutesLabel: 'Minutes'
+  hourlyTabTitle: '{{$.common.hourly}}'
+  dailyTabTitle: '{{$.common.daily}}'
+  weeklyTabTitle: 'Weekly'
+  monthlyTabTitle: '{{$.common.monthly}}'
+  yearlyTabTitle: '{{$.common.yearly}}'
+  runEvery: 'Run every'
+  runDailyAt: 'Run daily at'
+  runAt: 'Run at'
+  runOn: 'Run on'
+  runOnSpecificDay: 'Run on a specific day at monthly interval'
+  runOnSpecificDayMonth: 'Run on a specific day and month'
+  startingWith: 'Starting with'
+  enterCustomCron: 'Enter a custom cron expression'
+  minutesParentheses: 'minute(s)'
+  minutesAfterTheHour: 'minute(s) after the hour'
+  hoursAnd: 'hours(s) and'
+  ofEvery: 'of every'
+  onThe: 'on the'
+  monthsParentheses: 'month(s)'
+  hoursLabel: 'Hours'
+  dayOfMonthLabel: 'Day of month'
+  monthLabel: 'Month'
+  dayOfWeekLabel: 'Day of week'
+  MON: 'MON'
+  TUE: 'TUE'
+  WED: 'WED'
+  THU: 'THU'
+  FRI: 'FRI'
+  SAT: 'SAT'
+  SUN: 'SUN'
+  expressionBreakdown: 'Expression Breakdown'
+  cronExpression: 'Cron Expression'
+  cronExpressionRequired: 'Cron Expression required'
