feat: [CDS-44531]: Notifications Integration in Freeze Windows - Part 1 (#11760)
* feat: [CDS-44531]: Notifications Integration in Freeze Windows

* feat: [CDS-44531]: Notifications Integration in Freeze Windows

--- a/src/modules/72-freeze-windows/strings/strings.en.yaml
+++ b/src/modules/72-freeze-windows/strings/strings.en.yaml
@@ -37,3 +37,8 @@ globalFreeze:
   enableFreezeTitle: Enable Freeze on all deployments for this {{scope}}
   enableFreezeSuccess: Freeze enabled on all deployments for this {{scope}}
   enableFreezeFailure: Failed to enable freeze
+
+freezeNotifications:
+  windowEnabled: Freeze window is enabled
+  rejectedDeployments: Deployments are rejected due to freeze window
+  rejectedInvocations: Trigger invocations are rejected due to freeze window
