feat: [CDS-43132]: implement ECS Run Task step (#11239)
* feat: ECS Run Task step WIP

* feat: implement EcsRunTask step edit and runtime view

* feat: add optional section in ECS Run Task step

* chore: add test cases for TaskDefinitionModal and ECSRunTaskStepEdit components

* chore: add test cases for ECSRunTaskStep component

* chore: add more test cases for EcsRunTask step, so that coverage is more than 80 for every section

* fix: snapshot

* feat: add ECS Run Task Request Definition section to ECSRunTask step edit view

* feat: add support for runTaskRequestDefinition runtime fields

* fix: test cases in ECSRunTaskStep.test.tsx file

* fix: remove modifying of initialValues as property name has changed now and modification is not required

* fix: snapshot for manifestIdentifier

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -93,6 +93,12 @@ steps:
       useAwsInstanceFilter: Use AWS Instance Filter
       hostName: Host Name Convention
       vpcs: VPCs
+  ecsRunTaskStep:
+    ecsRunTaskDefinition: ECS Run Task Definition
+    runTaskDefinition: Run Task Definition
+    ecsRunTaskRequestDefinition: ECS Run Task Request Definition
+    runTaskRequestDefinition: Run Task Request Definition
+    skipSteadyStateCheck: Skip Steady-State Check
   ecsBGCreateServiceStep:
     sectionHeaders:
       configureProductionService: Configure your Production Service
