--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -163,13 +163,17 @@ secretManagerRequired: 'Secret Manager is required.'
 pipelineSteps:
   environmentTab:
     specifyYourEnvironment: Specify Environment
+    specifyYourEnvironments: Specify Environments
     specifyYourEnvironmentGroup: Specify Environment Group
     specifyYourInfrastructure: Specify Infrastructure
+    specifyYourInfrastructures: Specify Infrastructures
     specifyEnvironmentOrGroup: Specify environment or environment group
     specifyGitOpsClusters: Specify GitOps Clusters
     selectEnvironment: '- Select Environment -'
+    selectEnvironments: '- Select Environments -'
     selectEnvironmentGroup: '- Select Environment Group -'
     selectInfrastructure: '- Select Infrastructure -'
+    selectInfrastructures: '- Select Infrastructures -'
     selectInfrastructureType: 'Select Infrastructure Type'
     plusNewEnvironment: '+ {{$.newEnvironment}}'
     newEnvironment: '{{$.newEnvironment}}'
@@ -177,9 +181,12 @@ pipelineSteps:
     environmentOrEnvGroupAsRuntime: Which of Environment or Environment Group should be marked as runtime?
     allClustersSelected: All Clusters in Environment
     environmentIsRequired: '{{ $.common.validation.environmentIsRequired }}'
+    environmentsAreRequired: Environments are required
     infrastructureIsRequired: 'Infrastructure is required'
+    infrastructuresAreRequired: 'Infrastructures are required'
     environmentOrEnvGroupIsRequired: 'Environment or Environment Group is required'
     environmentInEnvGroupIsRequired: 'Environment in Environment Group is required'
+    environmentGroupIsRequired: 'Environment Group is required'
     clusterIsRequired: 'Clusters are required'
     multiEnvInfraToggleText: 'Deploy to multiple Environments or Infrastructures'
     viewEnvironmentInputs: View environment inputs
@@ -193,6 +200,10 @@ pipelineSteps:
     multiEnvironmentsConfirmationText: Are you sure you want to switch to deploying multiple environments or infrastructures?. If you choose to proceed, your existing environment will be migrated automatically.
     singleEnvironmentDialogTitleText: Deploy to single environment?
     singleEnvironmentConfirmationText: Are you sure you want to switch to deploying to a single environment?. If you choose to proceed, your existing environments will be lost.
+    deleteEnvironmentFromListDialogTitleText: Remove environment from list?
+    deleteEnvironmentFromListConfirmationText: Are you sure you want to remove {{name}} environment from the list?
+    deleteInfrastructureFromListDialogTitleText: Remove infrastructure from list?
+    deleteInfrastructureFromListConfirmationText: Are you sure you want to remove {{name}} infrastructure from the list?
   serviceTab:
     stageOverrides: Stage Overrides
     overrideChanges: Override artifacts, manifests, service variables for this stage
