fix: [CI-5693]: Correcting CI Step name regex (#11775)
* fix: [CI-5693]: Correcting name regex

* fix: [CI-5693]: Fix error handling in run and run test steps

* fix: [CI-5693]: Fix failing test

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -1417,3 +1417,6 @@ customDeployment:
     fetchScriptBodyRequired: 'Fetch Instances Script body is required'
   validations:
     nameUnique: Field Name should be unique
+step:
+  validation:
+    namePatternIsNotValid: 'Name can only contain alphanumerics, _ and -'
