feat: [CDS-42914]: 1. Fix update of Notifications in YAML, 2. Declare isReadonly as !isEdit 3. Adds permissions in Account Settings (#11779)
* feat: [CDS-42914]: 1. Fix update of Notifications in YAML

* feat: [CDS-42914]: 2. Declare isReadonly as !isEdit

* isReadly on NameIdDesc

* feat: [CDS-42914]: Adds Permissions in Accounts page

--- a/src/modules/72-freeze-windows/strings/strings.en.yaml
+++ b/src/modules/72-freeze-windows/strings/strings.en.yaml
@@ -42,3 +42,8 @@ freezeNotifications:
   windowEnabled: Freeze window is enabled
   rejectedDeployments: Deployments are rejected due to freeze window
   rejectedInvocations: Trigger invocations are rejected due to freeze window
+
+deploymentFreeze: Deployment Freeze
+
+rbac:
+  global: Global
