feat: [SRM-11377]: Added Code Errors Page to SRM, FF added SRM_ET_EXPERIMENTAL (#11351)

--- a/src/modules/85-cv/strings/strings.en.yaml
+++ b/src/modules/85-cv/strings/strings.en.yaml
@@ -965,3 +965,5 @@ metricThresholds:
   deletePromptTitle: Confirm delete Metric thresholds
   metricPacksDeletePromptContent: Unchecking the metric pack will also remove the corresponding metric thresholds settings. This action cannot be undone.
   customMetricsDeletePromptContent: Deleting the custom metric will also remove the corresponding metric thresholds settings. This action cannot be undone.
+codeErrors: Code Errors
+codeErrorsHeading: Review code errors related to your project
