fix: [PL-28563]: Import Template Feature (#11555)
* fix: [PL-28563]:Adding Import button and calling API for Import template feature

* fix: [PL-28668]: Added VersionLabel FormInput and ValidationSchema for it (#11621)

* fix: [PL-28689]: Adding the FFs so that Import template button is shown only after they enabled (#11646)

* fix:[PL-28563]: Added versionLabel string in to common string removing from templateLabel string component

* fix:[PL-28563]: update snapshot

* fix:[PL-28563]: Modified code

* fix:[PL-28563]: Updated the services file with TemplateName

* fix:[PL-28563]: Updated the useImport file with TemplateName

* fix:[PL-28563]: removed the templateIdentifier from the templateRequestBody

--- a/src/modules/10-common/strings/strings.en.yaml
+++ b/src/modules/10-common/strings/strings.en.yaml
@@ -801,6 +801,8 @@ template:
     templateDeleted: 'Template "{{ name }}" Deleted'
     errorWhileDeletingTemplates: Error occurred deleting Templates
     errorWhileDeletingTemplate: Error occurred deleting Template
+  createNewModal:
+    versionPlaceholder: 'Ex: Version1'
 viewLatest: View latest
 viewUsage: View Usage
 selected: 'Selected:'
