fix: [PIE-5623]: UX feedback pipeline studio (#11679)
* fix: [PIE-5623]: UX feedback pipeline studio

* fix: tests updated

* fix: revert stepGroup nested padding

* fix: snapshot update

--- a/src/modules/70-pipeline/strings/strings.en.yaml
+++ b/src/modules/70-pipeline/strings/strings.en.yaml
@@ -454,14 +454,15 @@ failureStrategies:
 loopingStrategy:
   title: Looping Strategy
   subTitle: 'Select 1 of the {{maxCount}} looping execution strategy below.'
-  warningText: All the configuration will be lost
+  warningText: All the configuration will be lost.
   learnMore: Learn more about Looping strategies
   deleteModal:
-    title: Are you sure, you want to remove the looping strategy?
-    content: '{{$.pipeline.loopingStrategy.warningText}}'
+    title: Remove looping strategy?
+    content: Are you sure you want to remove this looping strategy? {{$.pipeline.loopingStrategy.warningText}}
   toggleTypeModal:
-    title: Are you sure, you want to switch the looping strategy?
-    content: '{{$.pipeline.loopingStrategy.warningText}}'
+    title: Switch looping strategy?
+    content: Are you sure you want to switch lopping strategy? {{$.pipeline.loopingStrategy.warningText}}
+    switch: Switch
   matrix:
     label: Matrix
     helperText: Matrix gives the ability to execute the same set of tasks multiple times for a bunch of different configurations.
